<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_message_flow_testcases</name>
  <version>0.0.0</version>
  <description>Test cases for message flow through ROS 2 computation graph structures.</description>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/christophebedard/ros2_message_flow_testcases</url>
  <author email="bedard.christophe@gmail.com">Christophe Bedard</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>std_msgs</depend>
  <depend>tracetools</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>tracetools_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
